# effects

./: cabal.project  cabal.project.freeze
effects-playground/: Main.hs  NOTES.md  package.cabal
effects/src/Control/Monad/Effect/: Internal.hs
effects/src/Data/: Union.hs
